# second-brain

./: .env.example  .gitignore  CAPABILITIES_AND_LIMITATIONS.md  README.md  databricks.yml  pyproject.toml
agent_server/: agent.py  filesystem_tools.py  memory_models.py  memory_pipeline.py  memory_store.py  start_server.py  user_profile.py  utils.py
e2e-chatbot-app-next/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
e2e-chatbot-app-next/client/: index.html  package.json  vite.config.ts
e2e-chatbot-app-next/client/src/: index.css
e2e-chatbot-app-next/client/src/components/: app-sidebar.tsx  chat-header.tsx  chat.tsx  greeting.tsx  local-files-review.tsx  message-reasoning.tsx  message.tsx  messages.tsx  model-picker.tsx  multimodal-input.tsx  profile-sheet.tsx  sidebar-history-item.tsx  sidebar-history.tsx  suggested-actions.tsx  tool-activity-rail.tsx  workspace-root-picker.tsx
e2e-chatbot-app-next/client/src/contexts/: AppConfigContext.tsx
e2e-chatbot-app-next/client/src/hooks/: use-approval.ts
e2e-chatbot-app-next/client/src/layouts/: ChatLayout.tsx  RootLayout.tsx
e2e-chatbot-app-next/client/src/lib/: actions.ts
e2e-chatbot-app-next/client/src/pages/: ChatPage.tsx  NewChatPage.tsx
e2e-chatbot-app-next/scripts/: quickstart.sh  start-app.sh
e2e-chatbot-app-next/server/: package.json
e2e-chatbot-app-next/server/src/: index.ts
e2e-chatbot-app-next/server/src/lib/: folder-picker.ts  local-agent-config.ts  (+5 more)
e2e-chatbot-app-next/tests/pages/: chat.ts
scripts/: init_local.py  start_app.py
(+9 files in other folders)
