[project]
name = "second-brain"
version = "0.1.0"
description = "Second Brain agent backend and local-first knowledge workspace"
readme = "README.md"
authors = [
    { name = "Second Brain", email = "developer@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-langchain>=0.17.0",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.0",
    "langgraph>=1.0.9",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
]

setup = [
    "ruamel.yaml>=0.18.0",
]

[tool.uv]
default-groups = ["dev", "setup"]

[tool.hatch.build.targets.wheel]
packages = ["agent_server", "scripts"]

[tool.hatch.build.targets.sdist]
include = [
    "/agent_server",
    "/scripts",
    "/README.md",
    "/pyproject.toml",
    "/requirements.txt",
    "/.env.example",
    "/AGENTS.md",
    "/CAPABILITIES_AND_LIMITATIONS.md",
    "/CLAUDE.md",
    "/app.yaml",
    "/databricks.yml",
    "/e2e-chatbot-app-next",
]

[project.scripts]
quickstart = "scripts.quickstart:main"
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
agent-evaluate = "agent_server.evaluate_agent:evaluate"
discover-tools = "scripts.discover_tools:main"
preflight = "scripts.preflight:main"
init-local = "scripts.init_local:main"
